[package]
name = "blueprint"
version = "0.1.0"
edition = "2021"
description = "Blueprint DSL parser, transpiler, and executor for luxctl"
license = "AGPL-3.0-only"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "3.0.0"
color-eyre = "0.6.5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "warn"
needless_return = "warn"
redundant_clone = "warn"
redundant_closure = "warn"
unused_async = "warn"
unused_self = "warn"

[lints.rust]
unsafe_code = "warn"
dead_code = "warn"
